@@ -7,13 +7,14 @@ class modWebResourceproductGetcollectionProcessor extends ShopmodxWebGetCollecti
         return parent::prepareQueryBeforeCount($c);
     }
     
-    public function getColumns(xPDOQuery $c) {
+    public function setSelection(xPDOQuery $c) {
+        $c = parent::setSelection($c);
         $c->select(array(
             "Product.*",
             "Product.id as `product_id`",
         ));
-        return parent::getColumns($c);
-    } 
+        return $c;
+    }
 }
 
 return 'modWebResourceproductGetcollectionProcessor';
