@@ -6,12 +6,13 @@ class modWebResourceproductGetlistProcessor extends ShopmodxWebGetlistProcessor{
         return parent::prepareQueryBeforeCount($c);
     }
     
-    public function getColumns(xPDOQuery $c) {
+    public function setSelection(xPDOQuery $c) {
+        $c = parent::setSelection($c);
         $c->select(array(
             "Product.*",
             "Product.id as `product_id`",
         ));
-        return parent::getColumns($c);
+        return $c;
     }
 }
 
